Updated website content

--- a/ants.html
+++ b/ants.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class="hero-container">
-    <img class="hero-image" src="images/antspage-img/hero-ants.web">
+    <img class="hero-image" src="images/antspage-img/hero-ants.webp">
 </div>
 <header class="header">
     <a href="index.html"><img class="logo" src="images/logo.jpg"></a>
