--- a/bedbug.html
+++ b/bedbug.html
@@ -15,7 +15,7 @@
     <img class="hero-image" src="images/bedbugpage-img/hero-bedbug3.png">
 </div>
 <header class="header">
-    <a href="index.html"><img class="logo" src="'images/logo.jpg"></a>
+    <a href="index.html"><img class="logo" src="images/logo.jpg"></a>
     <div class="name1">
         WOOD'ASTER <br><p>PEST CONTROL</p>
     </div> 
