--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div> 
     <div>
         <ul class="nav-bar">
-            <li><a href="index.html">Services</a></li>
+            <li><a href="services.html">Services</a></li>
             <li><a href="aboutus.html">About us</a></li>
             <li><a href="contactus.html">Contact us</a></li>
         </ul>
