--- a/insect.html
+++ b/insect.html
@@ -47,7 +47,7 @@ We provide professional fly control treatment using spray, baits & traps, ensuri
 <br><br>Insects are small, invertebrate animals of the class Insecta, having three main body parts — head, thorax, and abdomen — with three pairs of jointed legs. Most insects also have antennae and usually one or two pairs of wings.</P>
     </div>
     <div>
-        <img class="what-img" src="images/fly.jpg'">
+        <img class="what-img" src="images/fly.jpg">
     </div>
 </div>
 <div class="sign">
