--- a/aboutus.html
+++ b/aboutus.html
@@ -15,7 +15,7 @@
     <img class="hero-image" src="images/aboutpage-img/hero-about3.jpg">
 </div>
 <header class="header">
-    <a href="index.html"><img class="logo" src="images/logo.jp"></a>
+    <a href="index.html"><img class="logo" src="images/logo.jpg"></a>
     <div class="name1">
         WOOD'ASTER <br><p>PEST CONTROL</p>
     </div> 
