last commit of website

--- a/aboutus.html
+++ b/aboutus.html
@@ -22,7 +22,7 @@
     <div>
         <ul class="nav-bar">
             <li><a href="index.html">Home</a></li>
-            <li><a href="'services.html">Services</a></li>
+            <li><a href="services.html">Services</a></li>
             <li><a href="contactus.html">Contact us</a></li>
         </ul>
     </div>
