change 1 of website

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <label for="menu-toggle" class="menu-btn"><i class="fa fa-bars"></i></label>
     <input type="checkbox" id="menu-toggle">
     <div class="dropdown-content">
-      <a href="index.html">Services</a>
+      <a href="services.html">Services</a>
       <a href="aboutus.html">About us</a>
       <a href="contactus.html">Contact us</a>
       
