tanvi: desktop changes by tanvi

--- a/aboutus.html
+++ b/aboutus.html
@@ -63,7 +63,7 @@
         </div>
         <div class="service-box2">
         <b>
-            &rarr; insects control<br>
+            &rarr; Insects control<br>
             &rarr; Mosquito management<br>
             &rarr; General treatment<br>
             &rarr; Anti Termites Reticulation Piping System<br></b>
@@ -125,9 +125,5 @@
     </div>
     </div>
   </footer>
-
-  <div class="footer-bottom">
-    Wood’aster pest control. All rights reserved.
-  </div>
 </body>
 </html>
