--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <p>Professional Pest Peace” signals that your pest control service delivers both expert-level performance and a serene, worry-free outcome for your clients</p>
     </div>
     <button class="hero-button"><a href="#inquiry-form">Get Quote</a></button>
-    <section>
+    <section class="our-services-section">
         <img class="spider-net" src="images/homepage-img/spider-net.png">
         <p class="our-services-text">OUR SERVICES</p>
         <img class="cockroach-png" src="images/homepage-img/cockroach-png.png">
@@ -378,7 +378,7 @@
     </div>
 
     <!-- Map Section -->
-    <div style="margin-left:10%; margin-right: 0%;" class="footer-section map">
+    <div style="margin-left:10%;" class="footer-section map">
       <h3>FIND US</h3>
       <iframe 
         src="https://www.google.com/maps?q=E-804,+Arise+Atlantis,+Beside+Parmeshwar+7,+Godrej+garden+city,+Jagatpur,+Gota,+Ahmedabad-382481&output=embed" 
