tanvi:complete mobile media

--- a/contactus.html
+++ b/contactus.html
@@ -111,7 +111,7 @@
         <a href="#"><i class="fab fa-google"></i></a>
       </div>
     </div>
-    <div style="margin-left: 20px; width:100px">
+    <div style="margin-left: 20px; width:100px"class="work-day-div">
       <h3 style="margin-top:20px;font-family: Roboto;">WORK DAYS</h3>
       <p style="font-family: 'Roboto Mono', monospace;">Mon-Sun</p>
       
